# ic-commerce

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  JEFF-NOTES.md  LICENSE  Makefile  README.md  dfx.json  dfx.prod.json  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: docker-entrypoint.prod.sh  docker-entrypoint.sh  post-install.sh  setup-env.sh
src/: App.tsx  vite-env.d.ts
src/backend/: Cargo.toml  backend.did
src/backend/migrations/: 000_initial.sql  001_stripe_payments.sql  002_permissions.sql  003_rename_stripe.sql  004_newsletter.sql  005_seed_variants.sql  006_store_settings.sql  007_deactivate_payments.sql  008_email_settings.sql  009_cleanup_payment_methods.sql  010_update_hero_text.sql  011_email_templates.sql  012_add_stock_location_code.sql  013_seed_product_images.sql  014_fix_product_images.sql  015_fix_broken_image_urls.sql  016_add_shipping_base_cost.sql  017_add_shipping_active.sql  018_add_webhook_secret.sql
src/backend/src/: api.rs  lib.rs  types.rs
src/components/: AdminLayout.tsx  ErrorBoundary.tsx  Layout.tsx  ProductCard.tsx  Toast.tsx
src/hooks/: useAuth.tsx  useCart.tsx  useSettings.tsx
src/lib/: backend.ts
src/pages/: AboutPage.tsx  AccountPage.tsx  CartPage.tsx  CheckoutPage.tsx  HomePage.tsx  OrderConfirmationPage.tsx  OrderPage.tsx  OrdersPage.tsx  ProductPage.tsx  ProductsPage.tsx  SupportPage.tsx
(+19 files in other folders)
