[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18"
candid = "0.10"
ic-rusqlite = { version = "0.4", features = ["precompiled"] }
ic-sql-migrate = { version = "0.0.5", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = "0.4"

getrandom = { version = "0.2", default-features = false, features = ["custom"] }

[build-dependencies]
ic-sql-migrate = { version = "0.0.5" }
